[package]
name = "milkyapps-core"
authors = ["Daniel Frederico Lins Leite"]
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
micromeasure = "0.6"
# Used only when running the tests under `--cfg loom` (see the `test-loom`
# justfile recipe).
loom = "0.7"

[lints.rust]
# `loom` is enabled via `--cfg loom` (RUSTFLAGS) for the `test-loom` recipe.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[profile.bench]
debug = true

[[bench]]
name = "simd"
harness = false

[[bench]]
name = "hazard_ptrs"
harness = false
